examples/neg/multiline_string.effekt
def main() = println("a // ERROR ')' expected but '"' found
b")
